--- a/BlazorTool.Client/_Imports.razor
+++ b/BlazorTool.Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using Telerik.Blazor
 @using Telerik.Blazor.Components
 @using Telerik.SvgIcons
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
