--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -14,11 +14,11 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="scheduler">
                 <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Scheduler
             </NavLink>
-        </div>
+        </div> *@
 
 
     </nav>
