--- a/BlazorTool.Client/Pages/Home.razor
+++ b/BlazorTool.Client/Pages/Home.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@* @page "/" *@
 
 <h1>Hello, world!</h1>
 
@@ -11,6 +11,7 @@ Welcome to your new app.
 <br />
 
 @helloString
+
 
 @code {
     MarkupString helloString;
