--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -7,19 +7,24 @@
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
+    <nav class="navbar-nav flex-column">
+        <div class="nav-item">
+            <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="/" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill me-2" aria-hidden="true"></span>
+                <span>Main</span>
             </NavLink>
         </div>
-
-        @* <div class="nav-item px-3">
-            <NavLink class="nav-link" href="scheduler">
-                <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Scheduler
+        <div class="nav-item">
+            <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="orders">
+                <span class="bi bi-cart-fill me-2" aria-hidden="true"></span>
+                <span>Orders</span>
             </NavLink>
-        </div> *@
-
-
+        </div>
+        <div class="nav-item">
+            <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="scheduler">
+                <span class="bi bi-calendar-fill me-2" aria-hidden="true"></span>
+                <span>Scheduler</span>
+            </NavLink>
+        </div>
     </nav>
 </div>
