--- a/BlazorTool.Client/Pages/Home.razor
+++ b/BlazorTool.Client/Pages/Home.razor
@@ -1,24 +1,17 @@
-﻿@* @page "/" *@
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<br />
-
-<TelerikButton OnClick="@SayHelloHandler" ThemeColor="@(ThemeConstants.Button.ThemeColor.Primary)">Say Hello</TelerikButton>
-
-<br />
-
-@helloString
-
-
+﻿@page "/"
+@inject NavigationManager NavigationManager
+<TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Warning" @onclick="OnOrderClick">ORDERS</TelerikButton>
+<TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Success" @onclick="OnSchedulerClick">SCHEDULER</TelerikButton>
 @code {
-    MarkupString helloString;
 
-    void SayHelloHandler()
+    private void OnOrderClick()
     {
-        string msg = string.Format("Hello from <strong>Telerik Blazor</strong> at {0}.<br /> Now you can use C# to write front-end!", DateTime.Now);
-        helloString = new MarkupString(msg);
+        // Navigate to the Orders page
+        NavigationManager.NavigateTo("/orders");
+    }
+
+    private void OnSchedulerClick()
+    {
+        NavigationManager.NavigateTo("/scheduler");
     }
 }
