--- a/BlazorTool.Client/_Imports.razor
+++ b/BlazorTool.Client/_Imports.razor
@@ -9,4 +9,6 @@
 @using Telerik.Blazor
 @using Telerik.Blazor.Components
 @using Telerik.SvgIcons
+@using Telerik.DataSource
+@using Telerik.DataSource.Extensions
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
