--- a/BlazorTool.Client/Pages/SchedulerPage.razor
+++ b/BlazorTool.Client/Pages/SchedulerPage.razor
@@ -4,6 +4,7 @@
 @using BlazorTool.Client.Models
 @using BlazorTool.Client.Services
 @using System.Text
+@using System.Diagnostics
 @using Telerik.Blazor.Components
 @using Telerik.Blazor.Components.Scheduler
 @using Telerik.DataSource.Extensions
@@ -11,7 +12,7 @@
 
 @inject ApiServiceClient apiService
 
-@rowStyles
+@cellStyles
 <h3>Scheduler</h3>
 
 <div style="display:flex; gap:1rem;">
@@ -49,22 +50,34 @@
         }
         else
         {
+            <TelerikTooltip TargetSelector=".tooltip-target" Width="300px"/>
             <TelerikGrid TItem="WorkOrder"
                          Data="@UntakenOrders"
                          RowDraggable="true"
                          OnRowDrop="@GridRowDrop"
                          Sortable="true"
-                         OnRowRender="@OnRowRenderHandler">
+                         
+            >
+
+                <RowTemplate Context="order">
+                    <td class="tooltip-target" title="@order.WODesc">@order?.AssetNo</td>
+                    <td class="tooltip-target" title="@order.WODesc">@order?.WOCategory</td>
+                    <td class="tooltip-target" title="@order.WODesc">@order?.DeviceCategory</td>
+                    <td class="state-@order?.StateColor?.TrimStart('#') tooltip-target" title="@order?.WODesc">@order?.WOState</td>
+                </RowTemplate>
+
                 <GridSettings>
                     <GridRowDraggableSettings DragClueField="@nameof(WorkOrder.WorkOrderID)" />
                 </GridSettings>
+                
+                
                 <GridColumns>
                     <GridColumn Field="@nameof(WorkOrder.AssetNo)" Title="Asset No" />
-                    <GridColumn Field="@nameof(WorkOrder.AssignedPerson)"/>
-                    <GridColumn Field="@nameof(WorkOrder.StartDate)" Title="Start Date" />
-                    <GridColumn Field="@nameof(WorkOrder.EndDate)" Title="End Date" />
+                    <GridColumn Field="@nameof(WorkOrder.WOCategory)"/>
+                    <GridColumn Field="@nameof(WorkOrder.DeviceCategory)" Title="Start Date" />
                     <GridColumn Field="@nameof(WorkOrder.WOState)" />
                 </GridColumns>
+
             </TelerikGrid>
         }
     </div>
@@ -79,20 +92,41 @@
     private SchedulerView CurrentView { get; set; } = SchedulerView.Month;
     private DateTime DayStart => DateTime.Today.AddHours(8);
     private DateTime DayEnd => DateTime.Today.AddHours(18);
-    private MarkupString rowStyles = new MarkupString(); //for rows colors
+    private MarkupString cellStyles = new MarkupString(); //for rows colors
     private List<WorkOrder> UntakenOrders { get; set; } = new();
     private List<WorkOrder> TakenOrders { get; set; } = new();
     private List<WorkOrder> _allOrders = new();
-    private bool isLoading { get; set; } = false;
+    private bool isLoading { get; set; } = true;
 
     protected override async Task OnInitializedAsync()
     {
+        var isWASM = JSRuntime is IJSInProcessRuntime;
+        Debug.Print($"--- OnInitializedAsync. WASM = {isWASM}");
+            await LoadData();
+        // if (isWASM)
+        // {
+        //     // Load data only in WASM mode to avoid double loading in prerendering
+        //     await LoadData();
+        // }
+        // else
+        // {
+        //     // In server-side mode, we can skip loading data here
+        //     await LoadData();
+        // } 
+    }
+
+    private async Task LoadData()
+    {
         isLoading = true;
-        _allOrders = (await apiService.GetWorkOrdersCachedAsync()); // Nie rozpoczete zlecenia
+        StateHasChanged();
+        _allOrders = await apiService.GetWorkOrdersCachedAsync(); // Nie rozpoczete zlecenia
         UntakenOrders = _allOrders.Where(x => x.TakeDate == null).ToList();
         TakenOrders = _allOrders.Where(x => x.TakeDate != null).ToList();
+        cellStyles = RenderStatesStyle(_allOrders);
         Appointments = TakenOrders.Select(o => new SchedulerAppointment(o)).ToList();
         isLoading = false;
+        StateHasChanged();
+
     }
 
     // ==== DragAndDrop from Grid to Scheduler ====
@@ -157,15 +191,18 @@
         return Task.CompletedTask;
     }
 
-    
+
 
     #region Grid Row Styles
     void OnRowRenderHandler(GridRowRenderEventArgs args)
     {
-        var item = args.Item as WorkOrder;
+        // var item = args.Item as WorkOrder;
 
-        args.Class += "state-" + item?.StateColor.TrimStart('#');
+        // args.Class += "state-" + item?.StateColor.TrimStart('#')+
+        // " tooltip-target";
+
     }
+
 
     private MarkupString RenderStatesStyle(List<WorkOrder> orders)
     {
@@ -193,7 +230,7 @@
                 default:
                     break;
             }
-            sb.AppendLine($".k-grid .k-master-row.state-{color} {{");
+            sb.AppendLine($".state-{color} {{");
             sb.AppendLine($"    background-color: {safeName};");
             sb.AppendLine("}");
         }
