--- a/BlazorTool.Client/Layout/MainLayout.razor
+++ b/BlazorTool.Client/Layout/MainLayout.razor
@@ -8,7 +8,7 @@
 
         <main>
             <div class="top-row px-4">
-                <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+                <p>Version alfa 0.0.1</p>
             </div>
 
             <article class="content px-4">
