--- a/BlazorTool.Client/Layout/MainLayout.razor
+++ b/BlazorTool.Client/Layout/MainLayout.razor
@@ -8,7 +8,7 @@
 
         <main>
             <div class="top-row px-4">
-                <p>Version </p>
+                <p>Version @ThisAssembly.AssemblyVersion</p>
             </div>
 
             <article class="content px-4">
