--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorTool</a>
+        <a class="navbar-brand" href="">@AppInfo.Name</a>
     </div>
 </div>
 
