--- a/BlazorTool/Components/App.razor
+++ b/BlazorTool/Components/App.razor
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="BlazorTool.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="@RenderMode.InteractiveAuto" />
-
+    <title>@AppInfo.Name</title>
     <link rel="stylesheet" href="https://blazor.cdn.telerik.com/blazor/6.2.0/kendo-theme-bootstrap/swatches/bootstrap-urban.css" />
     <script src="https://blazor.cdn.telerik.com/blazor/6.2.0/telerik-blazor.min.js" defer></script>
 </head>
