--- a/BlazorTool/Components/App.razor
+++ b/BlazorTool/Components/App.razor
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <Routes @rendermode="@RenderMode.InteractiveAuto" />
+    <Routes @rendermode="new InteractiveAutoRenderMode(prerender: false)" />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
