add Settings page add TestApiAddress settings.razor add CheckApiAddress in apiServiceClient

--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
                 <span class="bi bi-calendar-fill me-2" aria-hidden="true"></span>
                 <span>Scheduler</span>
             </NavLink>
+            <div class="nav-item px-3">
+                Add commentMore actions
+                <NavLink class="nav-link" href="settings">
+                    <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> Settings
+                </NavLink>
+            </div>
         </div>
     </nav>
 </div>
